--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,16 +1,24 @@
 {
-  "name": "frontend",
+  "name": "identicalframechecker",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.tsx",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack serve --open",
     "build": "webpack ."
   },
   "keywords": [],
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/oishireiyo/IdenticalFrameChecker.git"
+  },
+  "author": "Reiyo OISHI",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/oishireiyo/IdenticalFrameChecker/issues"
+  },
+  "homepage": "https://github.com/oishireiyo/IdenticalFrameChecker#readme",
   "devDependencies": {
     "@babel/cli": "^7.23.4",
     "@babel/core": "^7.23.5",
