Updated Dockerfile and added .gitignore

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -39,6 +39,7 @@ RUN python3 -m pip install -r requirements.txt
 EXPOSE ${EXPOSED_PORT}
 
 # コンテナ作成後に実行するコマンド
+# コンテナ内部実行されるため、環境変数(ENV)に設定した変数しか使えないため、EXPOSED_PORTをENVに設定する必要あり。
 # 全てのネットワークからのアクセスを受け入れるため、HOSTを0.0.0.0に設定する。
 # ポート番号はEXPOSEしたものと同一にする。
 CMD python3 api/server.py --host=0.0.0.0 --port=${EXPOSED_PORT}
