--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,12 +2,14 @@ blinker==1.7.0
 click==8.1.7
 Flask==3.0.0
 Flask-Cors==4.0.0
+gunicorn==21.2.0
 importlib-metadata==7.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
 numpy==1.26.2
 opencv-python==4.8.1.78
+packaging==23.2
 tqdm==4.66.1
 Werkzeug==3.0.1
 zipp==3.17.0
