--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack serve --open",
-    "build": "webpack ."
+    "build": "webpack .",
+    "format": "prettier --write ./src",
+    "lint": "eslint --fix ./src",
+    "fix": "npm run format && npm run lint"
   },
   "keywords": [],
   "repository": {
@@ -28,11 +31,16 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.20",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/parser": "^6.14.0",
     "axios": "^1.6.2",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
+    "eslint": "^8.55.0",
+    "eslint-plugin-react": "^7.33.2",
     "html-webpack-plugin": "^5.5.4",
     "postcss-loader": "^7.3.3",
+    "prettier": "^3.1.1",
     "style-loader": "^3.3.3",
     "tailwindcss": "^3.3.6",
     "ts-loader": "^9.5.1",
